Closed Bug 240759 Opened 22 years ago Closed 22 years ago

necko DNS cache stops working

Categories

(Core :: Networking, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla1.7final

People

(Reporter: darin.moz, Assigned: darin.moz)

References

Details

(Keywords: fixed1.7, perf, regression)

Attachments

(1 file)

necko DNS cache stops working. there is a serious problem with necko's DNS cache replacement policy. after visiting several sites, necko will stop caching DNS results. you can even go back to the very first URL visited, and it will not cache any DNS results for that site. it appears that a bunch of invalid entries are getting left over in the DNS cache causing it to not have any room for new host records.
Severity: normal → critical
Status: NEW → ASSIGNED
Flags: blocking1.7?
Target Milestone: --- → mozilla1.7final
Attached patch v1 patchSplinter Review
uhm, LIFO is probably not the best replacement policy :-(
Comment on attachment 146330 [details] [diff] [review] v1 patch ok, i suck. this bug existed in version 1.1 of the DNS rewrite.
Attachment #146330 - Flags: superreview?(bryner)
Attachment #146330 - Flags: review?(lorenzo)
Darin, You could look at Dan Bernstein's dnscache http://cr.yp.to/djbdns/dnscache.html. It uses a simple FIFO mechanism As somebody once described it on the list -- For those who haven't read it, the data structure that Dan is using is a marvel of craftmanship, with hashes and doubly linked lists (using only one 4-byte slot for both forward and backward pointer :-). --
ah! so this is why setting the dns cache expiration pref to something large didn't quite work as I expected. sorry for not filing that earlier :(
(In reply to comment #3) > Darin, You could look at Dan Bernstein's dnscache > http://cr.yp.to/djbdns/dnscache.html. It uses a simple FIFO mechanism Yusuf, thanks for the pointer. Our DNS cache is designed to be FIFO. I incorrectly coded it as LIFO, which is quite unfortunate :-(
> Yusuf, thanks for the pointer. Our DNS cache is designed to be FIFO. I > incorrectly coded it as LIFO, which is quite unfortunate :-( Ouch, You might want to let blizzard/caillon know about this, they could push this this patch to the Fedora Core 2 Mozilla tree which is based on 1.6. They could also let the other boston based ximian guys know which would take care of the Suse release
Attachment #146330 - Flags: superreview?(bryner) → superreview+
blizzard, chris: i hear moz 1.6 is being used for FC2. you might want this patch.
Attachment #146330 - Flags: review?(lorenzo) → review?(cbiesinger)
Attachment #146330 - Flags: review?(cbiesinger) → review+
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment on attachment 146330 [details] [diff] [review] v1 patch this is a good one for the 1.7 branch.
Attachment #146330 - Flags: approval1.7?
fixed1.7
Keywords: fixed1.7
to comment #6: SUSE 9.1 will ship 1.6 with this bug I fear because the master was already shipped :-(
*** Bug 227541 has been marked as a duplicate of this bug. ***
*** Bug 239370 has been marked as a duplicate of this bug. ***
*** Bug 188332 has been marked as a duplicate of this bug. ***
*** Bug 239023 has been marked as a duplicate of this bug. ***
*** Bug 241643 has been marked as a duplicate of this bug. ***
*** Bug 233563 has been marked as a duplicate of this bug. ***
*** Bug 209797 has been marked as a duplicate of this bug. ***
Flags: blocking1.7?
It seems that there is something broken again with it (since 1.72 or 1.73 releases up to latest trunk) see bug:273112 and dependance tree
Question: what FireFox build will carry this fix? I've reported an issue against FireFox and it was closed as duplicate of this issue. I can't verify the issue as fixed until I can reproduce the fix under FireFox on my end...
(In reply to comment #20) > Question: what FireFox build will carry this fix? I've reported an issue against This bug just have a patch and is closed since 1.6 build issue. This must be reopened as the latest stable version is afaik 1.7 and this braunch is the base of aviary's trunk. > FireFox and it was closed as duplicate of this issue. I can't verify the issue > as fixed until I can reproduce the fix under FireFox on my end... I cannot "unbug" the patch atm. I have no time and many thing in mind. I just suffer of it because my utilisation of moz1.7 is affected by that nastily.
please reopen. this is not fixed.
Blocks: 208287
Yves Lambert: What's your testcase? fwiw bug 208287 seems unrelated, especially if not using trunk.
(In reply to comment #23) > Yves Lambert: What's your testcase? Just stay some times using latest fire fox lastest 1.9 or latest firefox : the DNS hangs for several minutes after about of couple of hour of normal use of browser (resp. suite) some DNS resolution are still cached and other seems to hang forever. It can happen when visiting a page like this one. The second click is waiting for DNS resolution forever. I may have not choosen the right fixed bug to ask for reopen : this is not the only one relative to DNS cache that was filled in 4,5 or 6th mounth of 2004. The one i can't find back was marked as resolved fixed but there were 2 versions of the patch. The first was with a pile (lifo file) and the second which was approved was with a fifo. I bet there is a gamine there. If someone vcan help me and find the right but I *may* be able to see if there's somethin doggy in the patch. I never coded oe line of mozilla yet... > fwiw bug 208287 seems unrelated, especially if not using trunk. Well I've been using trunk but mozilla suite trunk has big problems with extension and as faik i'm using core trunk.
Yves: the problem you describe is not this bug (despite the fact that the summary may be similar to what you are observing). please file a new bug with as much information as you can provide.
Sorry Daren, 1. I have no time for days or weeks 2. I'm quite sure this'd be a dupe although the bug I wanted to be reopened is not that one and i did not find it yet. (not many time to search also) The bug to be reopened is about versatile DNS of some sites that was not possibly interpreted correctly by previous DNS cache system. The patch in that bug has 2 versions. The first was a lifo the reporter/coder corrected on fifo and i still bet famine occurs with that queue. The correction is more than 14 month old. Latest 1.6 did have the bug. Testcase : after several name resolution of the same domain, no other resolution is done for a very long time (posting and reading always the same news-server causes the bug to occur, someone had the same problem with an imap account too.
but this bug is about the DNS cache, not about DNS resolution. the two are independent.
(In reply to comment #27) > but this bug is about the DNS cache, not about DNS resolution. the two are > independent. Christian who are you talking too ? I am not sure this bug is DNS relative. Something that should be always in cache or that is never resolved using DNS system but HOST (case of a proxy-cache i tried @ localhost is to be never resolved after some cache results that stays in queue beacause they don't change (news server, IMAP off proxy) that is why there is famine and the famine is in DNS cache processing and nowhere else. That is why I think the bug is that one and should be reopened; When I have time i will roll down the algorythm to see if i find the famine. I have no time for at least 2 weeks.
*** Bug 287994 has been marked as a duplicate of this bug. ***
*** Bug 271636 has been marked as a duplicate of this bug. ***
*** Bug 281323 has been marked as a duplicate of this bug. ***
(In reply to comment #31) > *** Bug 281323 has been marked as a duplicate of this bug. *** Some one mentioned in passing that this might be related to DNS cashing and WAMMO it is a douplicate of a totally unrelated bug! Please remove this flag! This has NOTHING to do with the above problem. This problem STILL exists in my browser. I cannot use FF as a result. And it has nothing to do with DNS AT ALL! Please disconnect this bug and reopen it.
Master Merlin, a bug with the DNS cache was found and fixed. If problems still remain, then please file a new bug report. Please include as much detail as you can about the problem to help us resolve it properly. Thanks!
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: