fixes bug 240759 "necko DNS cache stops working" r=biesi sr=bryner